[project]
name = "scrape-to-md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "html2text>=2024.2.26",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
    "openai>=1.0.0",
    "python-frontmatter>=1.0.1"
]
